--- a/client/app.html
+++ b/client/app.html
@@ -49,6 +49,11 @@
                 <option>Rajaji Nagar</option>
             </select>
         </div>
+        <h2>Ready To Move</h2>
+        <div>
+            <input type="checkbox" id="readyToMoveBtn">
+            <label for="readyToMoveBtn">Yes</label>
+        </div>
         <button class="submit" onclick="onClickedEstimatePrice()" type="button">Estimate Price</button>
         <div id="uiEstimatedPrice" class="result">
             <h2></h2>
